storage/cdp-store: added new code
curently exact copy of posix (with 's/posix_/cdp_/')

Change-Id: I632a3e677475140cf38f0879d9f04f9d1dda944c
Signed-off-by: Amar Tumballi <amar@gluster.com>

--- a/configure.ac
+++ b/configure.ac
@@ -46,6 +46,8 @@ AC_CONFIG_FILES([Makefile
 		xlators/storage/Makefile
 		xlators/storage/posix/Makefile
 		xlators/storage/posix/src/Makefile
+		xlators/storage/cdp-store/Makefile
+		xlators/storage/cdp-store/src/Makefile
 		xlators/cluster/Makefile
 		xlators/cluster/afr/Makefile
 		xlators/cluster/afr/src/Makefile
